# operator

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  cog.toml
.bruno/: detailed-exposed-secret-report.yml  detailed-vulnerability-reports.yml  download-sbom-reports.yml  get-all-simple-vulnerabilty-reports.yml  get-an-image-vunerability-report.yml  health.yml  login.yml  opencollection.yml  simple-exposed-secret-reports.yml  simple-sbom-reports.yml  simple-vulnerability-reports.yml
.github/workflows/: commit-check.yaml  integration-tests.yaml  integration-tests.yml  release.yaml  release.yml  tests.yml  unit-tests.yaml  unit-tests.yml
deploy/: clusterrole.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  rolebinding.yaml  service.yaml  serviceaccount.yaml
helm/: values.trivy.yaml
kubernetes/: bootstrap.sh  clusterrole.yaml  deployment.yaml  ingress.yaml  ingressroute.yaml  kustomization.yaml  middleware.yaml  namespace.yaml
src/: lib.rs  main.rs
src/api/: error.rs  errors.rs  mod.rs  sbom_report.rs  start.rs  vulnerability_report.rs
src/common_test_utils/: utils.rs
src/controller/: mod.rs  sbom_report.rs  start.rs  vulnerability_report.rs
src/data/: mod.rs
src/dto/: image_vulnerability_report.rs  mod.rs  sboms_to_zip.rs  simple_sbom_report.rs  simple_vulnerability_report.rs  workload.rs
src/kube_state/: mod.rs  state.rs
src/kube_types/: artifact.rs  exposed_secret_report.rs  mod.rs  registry.rs  sbom_report.rs  (+3 more)
tests/: exposed_secret_report.rs  sbom_report.rs  vulnerability_report.rs
(+60 files in other folders)
