[package]
name = "trivy-operator-web-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
futures = "0.3"
k8s-openapi = { version = "0.25.0", features = ["v1_31"] }
kube = { version = "1.1.0", features = ["runtime", "derive"] }
schemars = { version = "0.8.22", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
actix-web = "4.11.0"