[package]
name = "trivy-operator-web-ui"
version = "0.1.1"
edition = "2024"

[dependencies]
chrono = "0.4.41"
zip = "4.4.0"
anyhow = "1.0"
futures = "0.3"
kube = { version = "3.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27.0", features = ["latest", "schemars"] }
schemars = { version = "1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
actix-web = "4.12.1"
derive_more = "2.1.1"
serde_yaml = "0.9.34"
ed25519-dalek = { version = "2.1.0", features = ["pkcs8", "rand_core"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
futures-util = "0.3"
rand = "0.8.5"

[dev-dependencies]
awc = "3.8.2"
